src/components/inputField/inputField.module.scss
.wrapper {
	display: flex;
	flex-direction: column;
	width: 100%;
	max-width: 400px;
	margin: 0 auto;
	gap: 0.5rem;

	label {
		font-size: 16px;
		color: var(--color-text);
	}

	input {
		padding: 0.5em;
		background-color: var(--color-background-white);
		border: 1px solid var(--color-border);
		color: var(--color-text);
		border-radius: 4px;
		font-size: 16px;
		margin-bottom: 0.3em;
		transition: border-color 0.5s ease;

		&:focus {
			border-color: var(--color-primary);
			outline: none;
		}
	}
}

